fix: :speech_balloon: Improved Small Phone Experience
Improved the experience on small devices by ensuring `&shy;``s (a dash that will only appear when the viewport is too small) are placed appropriately. Also made sure buttons had a slight margin bottom in case they end up stacking.

--- a/src/_includes/styles/main.css
+++ b/src/_includes/styles/main.css
@@ -47,3 +47,9 @@
 .prose :where(tbody td):not(:where([class~='not-prose'] *)) {
   @apply align-middle;
 }
+
+.prose {
+  .btn {
+    @apply mb-1;
+  }
+}
